# rummisolve

./: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
.github/workflows/: static.yml
src/: app.rs  color.rs  main.rs  model.rs  picker.rs  utils.rs
src/model/: combinations.rs  debug.rs  mod.rs  solve.rs  solver.rs  tile.rs  tileset.rs
src/utils/: hkt.rs  mod.rs  refs.rs  vec.rs
src/views/: chosen.rs  color_pick.rs  combinations.rs  debug.rs  mod.rs  picker.rs  pool.rs  tile.rs
