[package]
name = "rummisolve"
version = "0.0.3"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.64"
lazy_static = "1.4.0"
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { versions = "0.3.64", features = ["Window", "console"] }
yew = { version = "0.20", features = ["csr"] }
